--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # Files and directories created by pub
 .dart_tool/
+.idea/
 .packages
 build/
+coverage/
+
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
@@ -19,4 +22,6 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
-/coverage/
+
+
+/test/.test_coverage.dart
